Migraciones para modificacion y eliminacion de campos de los modelos. Se comienza la implementacion del caso de uso SEG14-Registrar informes para condonacion

--- a/implementacion/test/fixtures/desembolsos.yml
+++ b/implementacion/test/fixtures/desembolsos.yml
@@ -1,3 +1,19 @@
+# == Schema Information
+#
+# Table name: desembolsos
+#
+#  id              :integer          not null, primary key
+#  estado          :integer
+#  fecha_solicitud :date
+#  valor           :float
+#  girado          :float
+#  fecha_giro      :date
+#  condiciones     :text
+#  proyecto_id     :integer
+#  created_at      :datetime
+#  updated_at      :datetime
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
