--- a/implementacion/test/fixtures/dificultads.yml
+++ b/implementacion/test/fixtures/dificultads.yml
@@ -1,3 +1,15 @@
+# == Schema Information
+#
+# Table name: dificultads
+#
+#  id               :integer          not null, primary key
+#  tipo             :integer
+#  efecto           :text
+#  posible_solucion :text
+#  created_at       :datetime
+#  updated_at       :datetime
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
