--- a/implementacion/test/fixtures/evaluacions.yml
+++ b/implementacion/test/fixtures/evaluacions.yml
@@ -1,3 +1,16 @@
+# == Schema Information
+#
+# Table name: evaluacions
+#
+#  id                        :integer          not null, primary key
+#  porc_sugerido_condonacion :integer
+#  concepto                  :string(255)
+#  evaluador                 :string(255)
+#  informe                   :string(255)
+#  created_at                :datetime
+#  updated_at                :datetime
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
