--- a/implementacion/test/fixtures/informes.yml
+++ b/implementacion/test/fixtures/informes.yml
@@ -1,3 +1,16 @@
+# == Schema Information
+#
+# Table name: informes
+#
+#  id          :integer          not null, primary key
+#  descripcion :text
+#  es_final    :boolean
+#  fecha       :date
+#  tipo        :integer
+#  created_at  :datetime
+#  updated_at  :datetime
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
