--- a/implementacion/test/fixtures/visita_tecnicas.yml
+++ b/implementacion/test/fixtures/visita_tecnicas.yml
@@ -1,3 +1,15 @@
+# == Schema Information
+#
+# Table name: visita_tecnicas
+#
+#  id                :integer          not null, primary key
+#  observacion       :text
+#  porc_cumplimiento :float
+#  tipo_proyeccion   :integer
+#  created_at        :datetime
+#  updated_at        :datetime
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
