--- a/implementacion/test/fixtures/apoyo_institucionals.yml
+++ b/implementacion/test/fixtures/apoyo_institucionals.yml
@@ -1,3 +1,15 @@
+# == Schema Information
+#
+# Table name: apoyo_institucionals
+#
+#  id                :integer          not null, primary key
+#  tipo              :integer
+#  porc_cumplimiento :float
+#  comentario        :text
+#  created_at        :datetime
+#  updated_at        :datetime
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
