--- a/implementacion/test/fixtures/evaluadors.yml
+++ b/implementacion/test/fixtures/evaluadors.yml
@@ -1,3 +1,15 @@
+# == Schema Information
+#
+# Table name: evaluadors
+#
+#  id                :integer          not null, primary key
+#  area_conocimiento :string(255)
+#  fecha_inicial     :date
+#  fecha_final       :date
+#  created_at        :datetime
+#  updated_at        :datetime
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
