--- a/implementacion/test/fixtures/notificacions.yml
+++ b/implementacion/test/fixtures/notificacions.yml
@@ -1,3 +1,13 @@
+# == Schema Information
+#
+# Table name: notificacions
+#
+#  id         :integer          not null, primary key
+#  mensaje    :string(255)
+#  created_at :datetime
+#  updated_at :datetime
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
