--- a/implementacion/test/fixtures/desembolsos.yml
+++ b/implementacion/test/fixtures/desembolsos.yml
@@ -13,6 +13,10 @@
 #  created_at      :datetime
 #  updated_at      :datetime
 #
+# Indexes
+#
+#  index_desembolsos_on_proyecto_id  (proyecto_id)
+#
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
