--- a/implementacion/test/fixtures/proyectos.yml
+++ b/implementacion/test/fixtures/proyectos.yml
@@ -12,6 +12,10 @@
 #  created_at      :datetime
 #  updated_at      :datetime
 #
+# Indexes
+#
+#  index_proyectos_on_contrato_id  (contrato_id)
+#
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
