Implementacion inicial del caso de uso SEG15 - Asignar Evaluador para Condonación

--- a/implementacion/Gemfile
+++ b/implementacion/Gemfile
@@ -53,6 +53,11 @@ end
 
 gem 'devise'
 
+gem 'jquery-turbolinks'
+
+# Chosen
+gem 'chosen-rails'
+
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
 
