--- a/implementacion/test/fixtures/informes.yml
+++ b/implementacion/test/fixtures/informes.yml
@@ -14,6 +14,13 @@
 #  document_content_type :string(255)
 #  document_file_size    :integer
 #  document_updated_at   :datetime
+#  becario_id            :integer
+#  evaluador_id          :integer
+#
+# Indexes
+#
+#  index_informes_on_becario_id    (becario_id)
+#  index_informes_on_evaluador_id  (evaluador_id)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
