Agregada gema ci_reporter_rspec para correr pruebas unitarias en jenkins

--- a/implementacion/Gemfile
+++ b/implementacion/Gemfile
@@ -65,7 +65,9 @@ end
 
 # Gemas para ser usadas solo en el ambiente de pruebas (test)
 group :test do
-  gem 'ci_reporter'
+  #gem 'ci_reporter'
+  #gem 'ci_reporter_test_unit'
+  gem 'ci_reporter_rspec'
 end
 
 # Gema para gestionar la autenticación de usuarios
