--- a/implementacion/test/fixtures/evaluadors.yml
+++ b/implementacion/test/fixtures/evaluadors.yml
@@ -12,8 +12,8 @@
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  area_conocimiento: MyString
+ney:
+  area_conocimiento: El area de el meserismo
   fecha_inicial: 2014-10-04
   fecha_final: 2014-10-04
 
