Agregada gema shoulda para realizar pruebas unitarias

--- a/implementacion/Gemfile
+++ b/implementacion/Gemfile
@@ -67,7 +67,8 @@ end
 group :test do
   #gem 'ci_reporter'
   #gem 'ci_reporter_test_unit'
-  gem 'ci_reporter_rspec'
+  gem 'shoulda'
+  #gem 'ci_reporter_rspec'
 end
 
 # Gema para gestionar la autenticación de usuarios
