--- a/implementacion/Rakefile
+++ b/implementacion/Rakefile
@@ -1,8 +1,17 @@
 # Add your own tasks in files placed in lib/tasks ending in .rake,
 # for example lib/tasks/capistrano.rake, and they will automatically be available to Rake.
 require File.expand_path('../config/application', __FILE__)
-require 'ci/reporter/rake/rspec'
+#require 'ci/reporter/rake/rspec'
 
-task :rspec => 'ci:setup:rspec'
+#task :rspec => 'ci:setup:rspec'
+require 'rails/test_help'
+#require 'shoulda/rails'
+
+class ActiveSupport::TestCase
+  # Setup all fixtures in test/fixtures/*.yml for all tests in alphabetical order.
+  fixtures :all
+
+  # Add more helper methods to be used by all tests here...
+end
 
 Rails.application.load_tasks
