--- a/implementacion/Gemfile
+++ b/implementacion/Gemfile
@@ -68,6 +68,7 @@ group :test do
   #gem 'ci_reporter'
   #gem 'ci_reporter_test_unit'
   gem 'shoulda'
+  gem "codeclimate-test-reporter"
   #gem 'ci_reporter_rspec'
 end
 
