Agregado ci_reporter_minitest para pruebas

--- a/implementacion/Gemfile
+++ b/implementacion/Gemfile
@@ -67,7 +67,8 @@ end
 group :test do
   #gem 'ci_reporter'
   #gem 'ci_reporter_test_unit'
-  gem 'shoulda'
+  #gem 'shoulda'
+  gem 'ci_reporter_minitest'
   gem "codeclimate-test-reporter"
   #gem 'ci_reporter_rspec'
 end
