--- a/implementacion/Rakefile
+++ b/implementacion/Rakefile
@@ -4,14 +4,17 @@ require File.expand_path('../config/application', __FILE__)
 #require 'ci/reporter/rake/rspec'
 
 #task :rspec => 'ci:setup:rspec'
-require 'rails/test_help'
+#require 'rails/test_help'
 #require 'shoulda/rails'
 
-class ActiveSupport::TestCase
-  # Setup all fixtures in test/fixtures/*.yml for all tests in alphabetical order.
-  fixtures :all
+# class ActiveSupport::TestCase
+#   # Setup all fixtures in test/fixtures/*.yml for all tests in alphabetical order.
+#   fixtures :all
 
-  # Add more helper methods to be used by all tests here...
-end
+#   # Add more helper methods to be used by all tests here...
+# end
 
 Rails.application.load_tasks
+
+require 'ci/reporter/rake/minitest'
+task minitest: 'ci:setup:minitest'
