--- a/implementacion/test/fixtures/proyectos.yml
+++ b/implementacion/test/fixtures/proyectos.yml
@@ -28,6 +28,9 @@ one:
   linea_tematica: 1
   lugar_ejecucion: MyString
   titulo: MyString
+  num_convocatoria: 1231
+  nombre_convocatoria: Convocatoria Innova
+  contrato_id: 1
 
 two:
   duracion: 1
@@ -35,3 +38,6 @@ two:
   linea_tematica: 1
   lugar_ejecucion: MyString
   titulo: MyString
+  num_convocatoria: 322
+  nombre_convocatoria: Convocatoria Systemplus
+  contrato_id: 1
