--- a/implementacion/test/fixtures/informes.yml
+++ b/implementacion/test/fixtures/informes.yml
@@ -25,13 +25,17 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  descripcion: MyText
+  descripcion: Primer informe
   es_final: false
   fecha: 2014-10-04
   tipo: 1
+  proyecto_id: 1
+  becario_id: 1
 
 two:
-  descripcion: MyText
+  descripcion: Segundo informe
   es_final: false
-  fecha: 2014-10-04
+  fecha: 2014-11-01
   tipo: 1
+  proyecto_id: 1
+  becario_id: 1
