Fixtures adicionales para los test

--- a/implementacion/test/fixtures/informes.yml
+++ b/implementacion/test/fixtures/informes.yml
@@ -34,7 +34,7 @@ one:
 
 two:
   descripcion: Segundo informe
-  es_final: false
+  es_final: true
   fecha: 2014-11-01
   tipo: 1
   proyecto_id: 1
