Se cambia el campo estado de Propuesta de tipo booleano a string

--- a/implementacion/test/fixtures/propuestas.yml
+++ b/implementacion/test/fixtures/propuestas.yml
@@ -1,3 +1,20 @@
+# == Schema Information
+#
+# Table name: propuestas
+#
+#  id          :integer          not null, primary key
+#  numero      :integer
+#  nombre      :string(255)
+#  estado      :string(255)
+#  proyecto_id :integer
+#  created_at  :datetime
+#  updated_at  :datetime
+#
+# Indexes
+#
+#  index_propuestas_on_proyecto_id  (proyecto_id)
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
