--- a/implementacion/test/fixtures/evaluacions.yml
+++ b/implementacion/test/fixtures/evaluacions.yml
@@ -18,7 +18,7 @@ one:
   porc_sugerido_condonacion: 50
   concepto: concepto de evaluacion
   evaluador_id: one
-  informe_id: 1
+  informe_id: one
   porc_sugerido_condonacion: 11
 
 two:
@@ -26,5 +26,5 @@ two:
   porc_sugerido_condonacion: 70
   concepto: el concepto del de 70
   evaluador_id: one
-  informe_id: 1
+  informe_id: one
   porc_sugerido_condonacion: 5
