Agregados fixtures necesarios para test del caso de uso SEG15, SEG16 y SEG10

--- a/implementacion/test/fixtures/evaluacions.yml
+++ b/implementacion/test/fixtures/evaluacions.yml
@@ -17,14 +17,14 @@ one:
   id: 1
   porc_sugerido_condonacion: 50
   concepto: concepto de evaluacion
-  evaluador_id: one
-  informe_id: one
+  evaluador_id: 1
+  informe_id: 1
   porc_sugerido_condonacion: 11
 
 two:
   id: 2
   porc_sugerido_condonacion: 70
   concepto: el concepto del de 70
-  evaluador_id: one
-  informe_id: one
+  evaluador_id: 1
+  informe_id: 2
   porc_sugerido_condonacion: 5
