--- a/implementacion/test/fixtures/usuario_cols.yml
+++ b/implementacion/test/fixtures/usuario_cols.yml
@@ -5,6 +5,7 @@
 #  id         :integer          not null, primary key
 #  created_at :datetime
 #  updated_at :datetime
+#  nombre     :string(255)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
