--- a/implementacion/test/fixtures/users.yml
+++ b/implementacion/test/fixtures/users.yml
@@ -38,16 +38,26 @@ one:
   id: 1
   nombre: Felipe Colciencias
   email: pipe@colciencias.com
+  encrypted_password: <%= User.new.send(:password_digest, '12345678') %>
   role: 3
 
 two:
   id: 2
   nombre: Jaime Evaluador
   email: jaime@evaluador.com
+  encrypted_password: <%= User.new.send(:password_digest, '12345678') %>
   role: 4
 
 three:
   id: 3
   nombre: Pepe Becario
   email: pepe@becario.com
+  encrypted_password: <%= User.new.send(:password_digest, '12345678') %>
   role: 2
+
+four:
+  id: 4
+  nombre: El Administrador
+  email: admin@admin.com
+  encrypted_password: <%= User.new.send(:password_digest, '12345678') %>
+  role: 1
