--- a/implementacion/test/fixtures/users.yml
+++ b/implementacion/test/fixtures/users.yml
@@ -19,6 +19,7 @@
 #  nombre                 :string(255)
 #  becario_id             :integer
 #  evaluador_id           :integer
+#  usuario_col_id         :integer
 #
 # Indexes
 #
@@ -26,6 +27,7 @@
 #  index_users_on_email                 (email) UNIQUE
 #  index_users_on_evaluador_id          (evaluador_id)
 #  index_users_on_reset_password_token  (reset_password_token) UNIQUE
+#  index_users_on_usuario_col_id        (usuario_col_id)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
