--- a/implementacion/test/fixtures/usuario_cols.yml
+++ b/implementacion/test/fixtures/usuario_cols.yml
@@ -6,6 +6,11 @@
 #  created_at :datetime
 #  updated_at :datetime
 #  nombre     :string(255)
+#  user_id    :integer
+#
+# Indexes
+#
+#  index_usuario_cols_on_user_id  (user_id)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
